--- a/TourHo/css/lib.css
+++ b/TourHo/css/lib.css
@@ -19,6 +19,11 @@ div#titre {
     text-align: center;
     font-size: 28px;
 }
+
+div#soustitre {
+    text-align: center;
+    font-size: 20px;
+}
 /* Menu */
 div.menu {
     width: 100%;
